--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,14 +9,14 @@
 	height: 100vh;
 	visibility: visible;
 	opacity: 1;
-	transition: all ease-in 0.5s;
+	transition: opacity ease-in 0.5s;
 }
 
 .hide {
 	height: 0;
 	visibility: hidden;
 	opacity: 0;
-	transition: all ease-out 0.5s;
+	transition: opacity ease-out 0.5s;
 }
 
 .row {
@@ -28,8 +28,6 @@
 /* General Styles End */
 
 /* Landingpage Styles Start */
-.home {
-}
 
 .home-img {
 	width: 50%;
