--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,68 +1,71 @@
-/* General Styles Start */
-@import url("https://fonts.googleapis.com/css2?family=Exo:wght@200&family=Lobster&family=Montserrat:wght@200;400&family=Poppins:wght@100&family=Roboto:wght@100;300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Exo:wght@200&family=Lobster&family=Montserrat:wght@200;400&family=Poppins:wght@100;200;300&family=Roboto:wght@100;300;400&display=swap");
 
+/* General Styles Start */
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 	overflow: hidden;
-	font-family: "Roboto", serif;
+	font-family: "Poppins", serif;
+}
+body {
+	background-color: #110323;
+	color: #0ee6b7;
 }
 
 .show {
-	height: 100vh;
 	visibility: visible;
 	opacity: 1;
-	transition: opacity ease-in 0.5s;
+	transition: opacity ease-in 0.3s;
 }
 
 .hide {
-	height: 0;
-	visibility: hidden;
 	opacity: 0;
-	transition: opacity ease-out 0.5s;
+	visibility: hidden;
+	transition: opacity, height ease-out 0.3s;
 }
 
-.row {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	/* flex-basis: 50%; */
-}
 /* General Styles End */
 
 /* Alert Styling Start */
-.alert-container {
+.alert-overlay {
 	position: fixed;
-	height: 100vh;
+	height: 100%;
 	width: 100%;
-	background-color: rgba(0, 0, 0, 0.404);
-	z-index: 10;
+	top: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.6);
 }
 
 .text-container {
-	position: relative;
+	position: absolute;
 	left: 50%;
-	background-color: rgb(143, 68, 68);
 	height: 4em;
 	width: 40%;
-	border-radius: 4px;
+	/* background-color: rgb(143, 68, 68); */
+	background-color: #0ee6b7c0;
+	border-radius: 2px;
 	transform: translate(-50%, 0);
+	box-shadow: 0 0 4px #fff;
 }
 
 .alert-text {
-	position: absolute;
-	width: 100%;
-	line-height: 4em;
+	line-height: 3em;
 	text-align: center;
 	color: #fff;
+	font-size: 20px;
+	text-shadow: 0 0 5px #000;
+	font-weight: bold;
 }
 .alert-close {
 	position: absolute;
-	width: fit-content;
+	width: 30px;
+	height: 30px;
+	line-height: 2em;
+	text-align: center;
+	top: 0;
 	right: 0;
-	margin: 0.2em 0.2em 0 0;
-	padding: 0.3em 0.62em;
+	margin: 0.2em;
 	border-radius: 50%;
 	font-weight: bold;
 	background-color: rgb(180, 80, 80);
@@ -73,95 +76,168 @@
 .alert-close:hover {
 	background-color: rgb(252, 252, 252);
 	color: #000;
+	box-shadow: 0 0 10px 1px #000;
 }
 
 /* Alert Styling End */
 
-/* Landingpage Styles Start */
-
-.home-img {
-	width: 50%;
-	height: 100vh;
+/* Header Start */
+header {
+	height: 100px;
+	line-height: 100px;
+	margin: 20px 180px 0 100px;
 }
-
-.home-img img {
-	width: 90%;
-	margin-top: 20%;
-}
-
-.home-text {
-	height: 100vh;
-	padding: 10% 10% 0;
-	width: 50%;
-	background-color: cadetblue;
-}
-
-.home-text h1 {
-	font-size: 2.5em;
-	margin: 1em 0;
-}
-
-.home-text p {
-	margin: 1.5em 0;
-	font-size: 1.4em;
-}
-
-.btn {
-	padding: 1em 1.5em;
-	border: none;
-	border-radius: 4px;
+.navbar .brand {
+	float: left;
 	cursor: pointer;
-	box-shadow: 0 4px 5px -2px #000;
-}
-/* Landingpage Styles End */
-
-/* Akan Form Styles Start */
-.akan {
-	background-color: rgb(47, 141, 141);
 }
 
-.akan-content {
-	position: absolute;
-	padding: 2.5em;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	box-shadow: 0 0 3px rgb(255, 255, 255);
-	background-color: rgba(29, 187, 187, 0.288);
+.navbar .icons {
+	float: right;
 }
 
-.akan-form .form-group {
-	margin: 1em 0 0;
+ul li {
+	display: inline;
 }
 
-.akan-form input {
-	margin: 0.7em 0;
-	padding: 0.7em;
-}
-.akan-form label {
-	font-size: 1.2em;
+ul li a {
+	font-size: 30px;
+	margin: 0 20px;
+	color: #0ee6b7;
 }
 
-.overlay-content {
-	position: fixed;
-	background-color: rgba(0, 0, 0, 0.856);
-	height: 100vh;
-	width: 100%;
-	overflow: hidden;
+a:hover {
+	border-bottom: solid;
+}
+/* Header End */
+
+/* Home Start */
+.home {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 20px 100px 0;
 }
 
-.akan-overlay .overlay-text {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	background-color: aquamarine;
-	padding: 2.5em;
-	box-shadow: 0 1px 2px #fff;
+.home .home-left {
+	width: 50%;
 }
 
-.overlay-text > * {
-	margin: 1em 1em 2em;
+.home-left h1,
+.akan-name {
+	font-size: 72px;
+	line-height: 108px;
+	letter-spacing: 0.055em;
+	font-weight: bolder;
+	-webkit-text-fill-color: transparent;
+	-webkit-text-stroke: 1.5px #0ee6b7;
+	margin: 40px 0;
+}
+
+.home-left .description {
+	font-size: 24px;
+	line-height: 34px;
+	width: 90%;
+	margin: 30px 0;
+}
+
+.home-left .output {
+	margin-top: 60px;
+	font-size: 50px;
+	line-height: 60px;
+	color: #fff;
+	font-weight: bold;
+}
+
+.message {
+	font-size: 20px;
+	font-weight: normal;
+	margin-left: 230px;
+	color: #0ee6b7;
+	margin-top: 0;
+	padding-top: 0;
+}
+
+.day {
+	font-weight: bolder;
+}
+
+form {
+	background-color: #1d033f36;
+	border-radius: 5px;
+	padding: 80px;
+	font-size: 24px;
+	line-height: 34px;
+}
+
+form .form-group {
+	margin: 30px 0 0;
 	text-align: center;
 }
-/* Akan Form Styles End */
+
+.form-group input {
+	margin: 22px 0;
+}
+
+.form-group input[type="date"] {
+	width: 100%;
+	padding: 10px;
+	font-weight: bolder;
+	text-transform: uppercase;
+	font-size: 16px;
+	border: 1px solid #fff;
+	border-radius: 4px;
+	background-color: transparent;
+	color: #fff;
+	outline: none;
+}
+
+input[type="date"]:focus {
+	border-color: #27ee52;
+}
+
+input[type="date"]::before {
+	content: "😊";
+	padding: 0 20px;
+}
+
+.gender label {
+	cursor: pointer;
+	background-color: #1f9da1;
+	color: #fff;
+	font-weight: bold;
+	padding: 8px 15px;
+	border-radius: 4px;
+	border: 1px solid #27ee52;
+	font-size: 18px;
+}
+
+.gender .male {
+	margin-right: 15px;
+}
+.gender .female {
+	margin-left: 15px;
+}
+button {
+	width: 100%;
+	margin: 30px auto 0;
+	padding: 10px 0;
+	background-color: #1f9da1;
+	color: #fff;
+	border: 1px solid #27ee52;
+	border-radius: 2px;
+	font-weight: bolder;
+	cursor: pointer;
+}
+
+input[type="radio"] {
+	/* width: 100px; */
+	margin-right: 5px;
+}
+
+.credits {
+	font-size: 18px;
+	text-align: center;
+	margin-top: 30px;
+}
+/* Home End */
